# neovim-gnome-terminal-wrapper

./: README.md  nvim-wrapper  pyproject.toml
